--- a/index.html
+++ b/index.html
@@ -138,6 +138,20 @@
             </ul>
         </section>
 
+        <!-- 简介 -->
+        <section class="contact info-unit">
+            <h2>
+                <i class="fa fa-phone" aria-hidden="true"></i>简介</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <label>职业经验</label>
+                    <span>拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
+        消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。</span>
+                </li>
+            </ul>
+        </section>
+
         <section class="qrcode info-unit">
             <h2><i class="fa fa-qrcode" aria-hidden="true"></i>自媒体矩阵</h2>
             🍊<a href="https://www.liaozhiwei.cn/"><span>点击【主页】</span></a><br />
@@ -191,8 +205,6 @@
             <ul>
                 <li><span>
                             我是🌟廖志伟🌟，一名🎉Java高级开发工程师🎉、🎉Java领域优质创作者🎉、🎉CSDN博客专家🎉、🎉阿里云专家博主🎉、🎉51CTO专家博主🎉、🎉幕后大佬社区创始人🎉、🎉开源导航与开源项目贡献者🎉、🎉B站UP主🎉、🎉清华出版社作者🎉、🎉淘宝店家🎉、🎉软件公司创始人🎉、🎉Java课程讲师🎉等头衔。
-                            拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
-                            消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。
                     </span>
                 </li>
             </ul>
@@ -239,7 +251,7 @@
                         ICP优化、MRR优化、全文检索、行锁、表锁、间隙锁、死锁、主键自增长实现原理、索引数据结构、SQL优化、索引失效的几种情况、聚集索引、辅助索引、覆盖索引、联合索引、FIC、OSC、Online DDL、Cardinality值、redo log、bin log、undolog、Group Commint、隔离级别、
                         ACID底层实现原理、一致性非锁定读（MVCC的原理）、分布式事务、内部事务、SQL的执行流程、缓冲池、管理方式、重做日志刷盘策略、有MySQL调优、Apache ShardingSphere分库分表读写分离、主从复制工作原理、MySQL InnoDB Cluster高可用经验、冷备、热备、逻辑备。
 					</span>
-				</li>
+                </li>
                 <li>
                     <span>
                         📝深入理解Redis缓存： 多路复用模式、单线程模型、简单字符串、链表、字典、跳跃表、压缩列表、encoding属性编码、持久化、布隆过滤器、分布式寻址算法、过期策略、内存淘汰策略、Redis与数据库的数据一致性、Redis分布式锁、热点数据缓存、哨兵模式、集群模式、
@@ -317,6 +329,51 @@
                 </li>
             </ul>
         </section>
+        <!-- 生活技能 -->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>生活技能</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <p>可以做几道拿手菜</p>
+                </li>
+                <li>
+                    <p>会做一些家务洗衣做饭、打扫卫生、收拾房间、倒垃圾、换窗帘等</p>
+                </li>
+                <li>
+                    <p>懂一些基本的法律常识</p>
+                </li>
+                <li>
+                    <p>懂一些基本的电脑操作知识</p>
+                </li>
+                <li>
+                    <p>懂一些正确的生活常识</p>
+                </li>
+                <li>
+                    <p>懂一些紧急情况下的逃生、求生知识</p>
+                </li>
+                <li>
+                    <p>懂一点心理学的知识</p>
+                </li>
+                <li>
+                    <p>懂一些正确的理财常识</p>
+                </li>
+                <li>
+                    <p>能够高效的在网上找资源</p>
+                </li>
+                <li>
+                    <p>有自己的兴趣爱好</p>
+                </li>
+                <li>
+                    <p>保持积极向上生活态度</p>
+                </li>
+                <li>
+                    <p>能够定期做总结和规划</p>
+                </li>
+            </ul>
+        </section>
+
         <!-- 已达成的目标 -->
         <section class="work info-unit">
             <h2>
@@ -324,40 +381,40 @@
             <hr/>
             <ul>
                 <li>
-            <p>个人社区（幕后大佬）（已达成）</p>
-                </li>
-		<li>
-            <p>文章创作超过六百篇（已达成）</p>
+                    <p>个人社区（幕后大佬）（已达成）</p>
                 </li>
                 <li>
-            <p>文章访问量超过一百万（已达成）</p>
+                    <p>文章创作超过六百篇（已达成）</p>
                 </li>
                 <li>
-            <p>文章收藏次数超过一万（已达成）</p>
-                </li>
-		<li>
-            <p>文章评论次数超过一万（已达成）</p>
-                </li>    
-                <li>
-            <p>CSDN博客专家（已达成）</p>
+                    <p>文章访问量超过一百万（已达成）</p>
                 </li>
                 <li>
-            <p>51CTO专家博主（已达成）</p>
+                    <p>文章收藏次数超过一万（已达成）</p>
+                </li>
+                <li>
+                    <p>文章评论次数超过一万（已达成）</p>
+                </li>
+                <li>
+                    <p>CSDN博客专家（已达成）</p>
+                </li>
+                <li>
+                    <p>51CTO专家博主（已达成）</p>
                 </li>
                 <li>
                     <p>阿里云专家博主（已达成）</p>
                 </li>
                 <li>
-            <p>技术粉丝过万（已达成）</p>
+                    <p>技术粉丝过万（已达成）</p>
                 </li>
                 <li>
-            <p>打通36个新媒体平台（已达成）</p>
+                    <p>打通36个新媒体平台（已达成）</p>
                 </li>
                 <li>
-            <p>Java高级开发工程师（已达成）</p>
+                    <p>Java高级开发工程师（已达成）</p>
                 </li>
                 <li>
-            <p>Java领域优质创作者（已达成）</p>
+                    <p>Java领域优质创作者（已达成）</p>
                 </li>
             </ul>
         </section>
@@ -394,8 +451,8 @@
                 </li>
             </ul>
         </section>
-	    
-	<!-- 待提升的技能 -->
+
+        <!-- 待提升的技能 -->
         <section class="work info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>待提升的技能</h2>
@@ -445,8 +502,8 @@
                 </li>
             </ul>
         </section>
-	    
-	            <!-- 自我评价 -->
+
+        <!-- 自我评价 -->
         <section class="work info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>自我评价/期望</h2>
@@ -469,6 +526,33 @@
                 </li>
                 <li>
                     <p>勇于面对困难，迎接挑战，乐于学习新的知识，并对未来有充足的信心。</p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- 副业思路 -->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>副业思路</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <p>思路1：开发一款社交类型的APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高兴技术企业材料，申请政府高兴企业补贴。</p>
+                </li>
+                <li>
+                    <p>思路2：自媒体平台引流到自己的淘宝店铺，淘宝店铺可以卖课程，也可以卖一些其他商品。</p>
+                </li>
+                <li>
+                    <p>思路3：先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，至少百度词条你至少可以写个某书的作者吧，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
+                </li>
+                <li>
+                    <p>思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台（哔哩哔哩，西瓜视频，知乎)，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。</p>
+                </li>
+                <li>
+                    <p>思路5：写付费专栏文章，短篇付费小说。</p>
+                </li>
+                <li>
+                    <p>思路6：去找一些比较便宜的货源，在自己的淘宝店卖，前期选择一些低利润的商品让淘宝店铺火起来，后期再上架一些高利润的商品。</p>
                 </li>
             </ul>
         </section>
