--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <hr/>
             <ul>
                 <li>
-                    <p>爱好：跑步、羽毛球、健身、唱歌、绘画、街舞、表演、辩论、音乐、摄影、剪辑</p>
+                    <p>跑步、羽毛球、健身、唱歌、绘画、街舞、表演、辩论、音乐、摄影、剪辑</p>
                 </li>
                 <li>
                     <p>提升专业知识、职业技能、英语技能、沟通能力、耐心、学习前端知识做全栈开发</p>
