--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                     <p>喜欢的歌手：林俊杰、周杰伦、Taylor Swift、薛之谦</p>
                 </li>
                 <li>
-                    <p>喜欢的电影：漫威系列、DC系列、速度与激情系列、吸血鬼日记</p>
+                    <p>喜欢的电影：漫威系列、DC系列、速度与激情系列、吸血鬼日记系列</p>
                 </li>
             </ul>
         </section>
