--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@
             <hr/>
             <ul>
                 <li>
-                    <label>职业经验</label>
-                    <span>拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
-        消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。</span>
+                    拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
+        消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。
                 </li>
             </ul>
         </section>
