--- a/index.html
+++ b/index.html
@@ -539,19 +539,16 @@
                     <p>思路1：开发一款社交类型的APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高兴技术企业材料，申请政府高兴企业补贴。</p>
                 </li>
                 <li>
-                    <p>思路2：自媒体平台引流到自己的淘宝店铺，淘宝店铺可以卖课程，也可以卖一些其他商品。</p>
+                    <p>思路2：开淘宝店，自媒体平台引流到自己的淘宝店铺，淘宝店铺可以卖课程，也可以卖一些其他商品。前期去找一些比较便宜的货源，在自己的淘宝店卖，前期选择一些低利润的商品让淘宝店铺火起来，后期再上架一些高利润的商品。</p>
                 </li>
                 <li>
-                    <p>思路3：先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，至少百度词条你至少可以写个某书的作者吧，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
+                    <p>思路3：出版书籍，可以先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，至少百度词条你至少可以写个某书的作者吧，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
                 </li>
                 <li>
                     <p>思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台（哔哩哔哩，西瓜视频，知乎)，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。</p>
                 </li>
                 <li>
-                    <p>思路5：写付费专栏文章，短篇付费小说。</p>
-                </li>
-                <li>
-                    <p>思路6：去找一些比较便宜的货源，在自己的淘宝店卖，前期选择一些低利润的商品让淘宝店铺火起来，后期再上架一些高利润的商品。</p>
+                    <p>思路5：写付费专栏文章、短篇付费小说。</p>
                 </li>
             </ul>
         </section>
