--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <ul>
                 <li>
                     拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
-        消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。
+                    消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。
                 </li>
             </ul>
         </section>
@@ -335,40 +335,40 @@
             <hr/>
             <ul>
                 <li>
-                    <p>可以做几道拿手菜</p>
+                    <p>🍊可以做几道拿手菜</p>
                 </li>
                 <li>
-                    <p>会做一些家务洗衣做饭、打扫卫生、收拾房间、倒垃圾、换窗帘等</p>
+                    <p>🍊会做一些家务洗衣做饭、打扫卫生、收拾房间、倒垃圾、换窗帘等</p>
                 </li>
                 <li>
-                    <p>懂一些基本的法律常识</p>
+                    <p>🍊懂一些基本的法律常识</p>
                 </li>
                 <li>
-                    <p>懂一些基本的电脑操作知识</p>
+                    <p>🍊懂一些基本的电脑操作知识</p>
                 </li>
                 <li>
-                    <p>懂一些正确的生活常识</p>
+                    <p>🍊懂一些正确的生活常识</p>
                 </li>
                 <li>
-                    <p>懂一些紧急情况下的逃生、求生知识</p>
+                    <p>🍊懂一些紧急情况下的逃生、求生知识</p>
                 </li>
                 <li>
-                    <p>懂一点心理学的知识</p>
+                    <p>🍊懂一点心理学的知识</p>
                 </li>
                 <li>
-                    <p>懂一些正确的理财常识</p>
+                    <p>🍊懂一些正确的理财常识</p>
                 </li>
                 <li>
-                    <p>能够高效的在网上找资源</p>
+                    <p>🍊能够高效的在网上找资源</p>
                 </li>
                 <li>
-                    <p>有自己的兴趣爱好</p>
+                    <p>🍊有自己的兴趣爱好</p>
                 </li>
                 <li>
-                    <p>保持积极向上生活态度</p>
+                    <p>🍊保持积极向上生活态度</p>
                 </li>
                 <li>
-                    <p>能够定期做总结和规划</p>
+                    <p>🍊能够定期做总结和规划</p>
                 </li>
             </ul>
         </section>
@@ -380,40 +380,40 @@
             <hr/>
             <ul>
                 <li>
-                    <p>个人社区（幕后大佬）（已达成）</p>
+                    <p>🍊个人社区（幕后大佬）（已达成）</p>
                 </li>
                 <li>
-                    <p>文章创作超过六百篇（已达成）</p>
+                    <p>🍊文章创作超过六百篇（已达成）</p>
                 </li>
                 <li>
-                    <p>文章访问量超过一百万（已达成）</p>
+                    <p>🍊文章访问量超过一百万（已达成）</p>
                 </li>
                 <li>
-                    <p>文章收藏次数超过一万（已达成）</p>
+                    <p>🍊文章收藏次数超过一万（已达成）</p>
                 </li>
                 <li>
-                    <p>文章评论次数超过一万（已达成）</p>
+                    <p>🍊文章评论次数超过一万（已达成）</p>
                 </li>
                 <li>
-                    <p>CSDN博客专家（已达成）</p>
+                    <p>🍊CSDN博客专家（已达成）</p>
                 </li>
                 <li>
-                    <p>51CTO专家博主（已达成）</p>
+                    <p>🍊51CTO专家博主（已达成）</p>
                 </li>
                 <li>
-                    <p>阿里云专家博主（已达成）</p>
+                    <p>🍊阿里云专家博主（已达成）</p>
                 </li>
                 <li>
-                    <p>技术粉丝过万（已达成）</p>
+                    <p>🍊技术粉丝过万（已达成）</p>
                 </li>
                 <li>
-                    <p>打通36个新媒体平台（已达成）</p>
+                    <p>🍊打通36个新媒体平台（已达成）</p>
                 </li>
                 <li>
-                    <p>Java高级开发工程师（已达成）</p>
+                    <p>🍊Java高级开发工程师（已达成）</p>
                 </li>
                 <li>
-                    <p>Java领域优质创作者（已达成）</p>
+                    <p>🍊Java领域优质创作者（已达成）</p>
                 </li>
             </ul>
         </section>
@@ -425,28 +425,28 @@
             <hr/>
             <ul>
                 <li>
-                    <p>文章点赞次数超过一万（9,121/10000）</p>
+                    <p>🍊文章点赞次数超过一万（9,121/10000）</p>
                 </li>
                 <li>
-                    <p>CSDN全站排名前一百名（最靠近的一次是134名）</p>
+                    <p>🍊CSDN全站排名前一百名（最靠近的一次是134名）</p>
                 </li>
                 <li>
-                    <p>社交类APP研发成功（研发中）</p>
+                    <p>🍊社交类APP研发成功（研发中）</p>
                 </li>
                 <li>
-                    <p>图灵学院课程学完（架构师课程学了大半了）</p>
+                    <p>🍊图灵学院课程学完（架构师课程学了大半了）</p>
                 </li>
                 <li>
-                    <p>还清老家的房贷（还有五十万房贷）</p>
+                    <p>🍊还清老家的房贷（还有五十万房贷）</p>
                 </li>
                 <li>
-                    <p>娶个媳妇生个娃（单身求偶状态）</p>
+                    <p>🍊娶个媳妇生个娃（单身求偶状态）</p>
                 </li>
                 <li>
-                    <p>独立出版专业书籍（写书中）</p>
+                    <p>🍊独立出版专业书籍（写书中）</p>
                 </li>
                 <li>
-                    <p>实现个人财富自由（还在做梦）</p>
+                    <p>🍊实现个人财富自由（还在做梦）</p>
                 </li>
             </ul>
         </section>
@@ -458,19 +458,19 @@
             <hr/>
             <ul>
                 <li>
-                    <p>跑步、羽毛球、健身、唱歌、绘画、街舞、表演、辩论、音乐、摄影、剪辑</p>
+                    <p>🍊跑步、羽毛球、健身、唱歌、绘画、街舞、表演、辩论、音乐、摄影、剪辑</p>
                 </li>
                 <li>
-                    <p>提升专业知识、职业技能、英语技能、沟通能力、耐心、学习前端知识做全栈开发</p>
+                    <p>🍊提升专业知识、职业技能、英语技能、沟通能力、耐心、学习前端知识做全栈开发</p>
                 </li>
                 <li>
-                    <p>减脂、练腹肌、胸肌、肱二头肌、练腰、练核心力量</p>
+                    <p>🍊减脂、练腹肌、胸肌、肱二头肌、练腰、练核心力量</p>
                 </li>
                 <li>
-                    <p>养胃、养肝、养肾、护眼、护肤</p>
+                    <p>🍊养胃、养肝、养肾、护眼、护肤</p>
                 </li>
                 <li>
-                    <p>多接触异性、多和高层次人群交流、提升眼界</p>
+                    <p>🍊多接触异性、多和高层次人群交流、提升眼界</p>
                 </li>
             </ul>
         </section>
@@ -482,22 +482,22 @@
             <hr/>
             <ul>
                 <li>
-                    <p>喜欢的运动：乒乓球、篮球、羽毛球、跑步、健身</p>
+                    <p>🍊喜欢的运动：乒乓球、篮球、羽毛球、跑步、健身</p>
                 </li>
                 <li>
-                    <p>喜欢的小说：斗罗大陆、三体、三寸人间、求魔</p>
+                    <p>🍊喜欢的小说：斗罗大陆、三体、三寸人间、求魔</p>
                 </li>
                 <li>
-                    <p>喜欢的动漫：超神学院、秦时明月、画江湖、吞噬星空</p>
+                    <p>🍊喜欢的动漫：超神学院、秦时明月、画江湖、吞噬星空</p>
                 </li>
                 <li>
-                    <p>喜欢的游戏：王者荣耀、QQ飞车、绝地求生、部落冲突</p>
+                    <p>🍊喜欢的游戏：王者荣耀、QQ飞车、绝地求生、部落冲突</p>
                 </li>
                 <li>
-                    <p>喜欢的歌手：林俊杰、周杰伦、Taylor Swift、薛之谦</p>
+                    <p>🍊喜欢的歌手：林俊杰、周杰伦、Taylor Swift、薛之谦</p>
                 </li>
                 <li>
-                    <p>喜欢的电影：漫威系列、DC系列、速度与激情系列、吸血鬼日记系列</p>
+                    <p>🍊喜欢的电影：漫威系列、DC系列、速度与激情系列、吸血鬼日记系列</p>
                 </li>
             </ul>
         </section>
@@ -509,22 +509,22 @@
             <hr/>
             <ul>
                 <li>
-                    <p>有良好的沟通，团队协作能力，工作主动，耐心强，责任心、执行力及抗压性强。</p>
+                    <p>🍊有良好的沟通，团队协作能力，工作主动，耐心强，责任心、执行力及抗压性强。</p>
                 </li>
                 <li>
-                    <p>自律，爱学习，认真，有目标感，有使命感，努力，上进，主人翁意识。</p>
+                    <p>🍊自律，爱学习，认真，有目标感，有使命感，努力，上进，主人翁意识。</p>
                 </li>
                 <li>
-                    <p>为人诚恳，待人真诚，以更包容开放的心态，观人、待事、接物。</p>
+                    <p>🍊为人诚恳，待人真诚，以更包容开放的心态，观人、待事、接物。</p>
                 </li>
                 <li>
-                    <p>懂得克制自己，学会掌控人性里的欲望，抵得住花花世界的诱惑。</p>
+                    <p>🍊懂得克制自己，学会掌控人性里的欲望，抵得住花花世界的诱惑。</p>
                 </li>
                 <li>
-                    <p>不把时间浪费在无意义的社交上，不把精力消耗在无关紧要的人身上。</p>
+                    <p>🍊不把时间浪费在无意义的社交上，不把精力消耗在无关紧要的人身上。</p>
                 </li>
                 <li>
-                    <p>勇于面对困难，迎接挑战，乐于学习新的知识，并对未来有充足的信心。</p>
+                    <p>🍊勇于面对困难，迎接挑战，乐于学习新的知识，并对未来有充足的信心。</p>
                 </li>
             </ul>
         </section>
@@ -536,19 +536,19 @@
             <hr/>
             <ul>
                 <li>
-                    <p>思路1：开发一款社交类型的APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高兴技术企业材料，申请政府高兴企业补贴。</p>
+                    <p>🍊思路1：开发一款社交类型的APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高兴技术企业材料，申请政府高兴企业补贴。</p>
                 </li>
                 <li>
-                    <p>思路2：开淘宝店，自媒体平台引流到自己的淘宝店铺，淘宝店铺可以卖课程，也可以卖一些其他商品。前期去找一些比较便宜的货源，在自己的淘宝店卖，前期选择一些低利润的商品让淘宝店铺火起来，后期再上架一些高利润的商品。</p>
+                    <p>🍊思路2：开淘宝店，自媒体平台引流到自己的淘宝店铺，淘宝店铺可以卖课程，也可以卖一些其他商品。前期去找一些比较便宜的货源，在自己的淘宝店卖，前期选择一些低利润的商品让淘宝店铺火起来，后期再上架一些高利润的商品。</p>
                 </li>
                 <li>
-                    <p>思路3：出版书籍，可以先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，至少百度词条你至少可以写个某书的作者吧，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
+                    <p>🍊思路3：出版书籍，可以先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，至少百度词条你至少可以写个某书的作者吧，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
                 </li>
                 <li>
-                    <p>思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台（哔哩哔哩，西瓜视频，知乎)，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。</p>
+                    <p>🍊思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台（哔哩哔哩，西瓜视频，知乎)，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。</p>
                 </li>
                 <li>
-                    <p>思路5：写付费专栏文章、短篇付费小说。</p>
+                    <p>🍊思路5：写付费专栏文章、短篇付费小说。</p>
                 </li>
             </ul>
         </section>
