--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <hr/>
             <ul>
                 <li><span>
-                            我是🌟廖志伟🌟，一名🎉Java高级开发工程师🎉、🎉Java领域优质创作者🎉、🎉CSDN博客专家🎉、🎉阿里云专家博主🎉、🎉51CTO专家博主🎉、🎉幕后大佬社区创始人🎉、🎉开源导航与开源项目贡献者🎉、🎉B站UP主🎉、🎉清华出版社作者🎉、🎉淘宝店家🎉、🎉软件公司创始人🎉、🎉Java课程讲师🎉等头衔。
+                            我是🌟廖志伟🌟，一名🎉Java高级开发工程师🎉、🎉Java领域优质创作者🎉、🎉CSDN博客专家🎉、🎉阿里云专家博主🎉、🎉51CTO专家博主🎉、🎉幕后大佬社区创始人🎉、🎉开源导航与开源项目贡献者🎉、🎉哔哩哔哩UP主🎉、🎉清华出版社作者🎉、🎉淘宝店家🎉、🎉软件公司创始人🎉、🎉Java课程讲师🎉等头衔。
                     </span>
                 </li>
             </ul>
