--- a/index.html
+++ b/index.html
@@ -141,42 +141,42 @@
 
         <section class="qrcode info-unit">
             <h2><i class="fa fa-qrcode" aria-hidden="true"></i>自媒体矩阵</h2>
-            🎉<a href="https://www.liaozhiwei.cn/"><span>点击【主页】</span></a><br />
-            🎉<a href="https://gitee.com/java_wxid/java_wxid"><span>点击【项目】</span></a><br />
-            🎉<a href="https://bbs.csdn.net/forums/liaozhiwei"><span>点击【社区】</span></a><br />
-            🎉<a href="https://www.yuque.com/java_wxid"><span>点击【语雀】</span></a><br />
-            🎉<a href="https://gitee.com/java_wxid"><span>点击【码云】</span></a><br />
-            🎉<a href="https://www.zhihu.com/people/java_wxid"><span>点击【知乎】</span></a><br />
-            🎉<a href="https://segmentfault.com/u/java_wxid"><span>点击【思否】</span></a><br />
-            🎉<a href="https://www.jianshu.com/u/291aeb531f8b"><span>点击【简书】</span></a><br />
-            🎉<a href="https://v.kuaishou.com/hx84Bn"><span>点击【快手】</span></a><br />
-            🎉<a href="https://www.douyin.com/user/MS4wLjABAAAAymuW4SDeeylSFzL8oUMvVn50FY4X37UOeUBJB27dcv0"><span>点击【抖音】</span></a><br />
-            🎉<a href="https://blog.csdn.net/Java_programmer_liao"><span>点击【CSDN】</span></a><br />
-            🎉<a href="https://cloud.tencent.com/developer/user/5598481"><span>点击【腾讯云】</span></a><br />
-            🎉<a href="https://developer.aliyun.com/profile/yt5hnoa7p5vi2"><span>点击【阿里云】</span></a><br />
-            🎉<a href="https://bbs.huaweicloud.com/community/usersnew/id_1640920880921267"><span>点击【华为云】</span></a><br />
-            🎉<a href="https://www.cnblogs.com/liaozhiwei/"><span>点击【博客园】</span></a><br />
-            🎉<a href="https://img-blog.csdnimg.cn/f7b14fe02241434baaed687065479045.png"><span>点击【小红书】</span></a><br />
-            🎉<a href="https://media.om.qq.com/author?id=MqnvyVClU3TriUji4gP9_bvg0"><span>点击【企鹅号】</span></a><br />
-            🎉<a href="https://author.baidu.com/home?context=%7B%22app_id%22%3A%221678622734462341%22%7D&amp;wfr=bjh"><span>点击【百家号】</span></a><br />
-            🎉<a href="http://a.mp.uc.cn/media?mid=d63d204da4c4410ab897f12e10c50437"><span>点击【大鱼号】</span></a><br />
-            🎉<a href="https://mp.sohu.com/profile?xpt=ZTJlYWY3YzgtNzZmYi00NTljLTkwZjgtNGM4NmNhNDQxODVj"><span>点击【搜狐号】</span></a><br />
-            🎉<a href="http://a.mp.uc.cn/media?mid=d63d204da4c4410ab897f12e10c50437"><span>点击【大鱼号】</span></a><br />
-            🎉<a href="https://www.360kuai.com/pc/zmt?id=3001713896"><span>点击【快传号】</span></a><br />
-            🎉<a href="https://www.163.com/dy/media/T1624158133120.html"><span>点击【网易号】</span></a><br />
-            🎉<a href="https://www.9kd.com/view/20040172"><span>点击【凯迪网】</span></a><br />
-            🎉<a href="https://gitcode.net/java_wxid"><span>点击【Gitcode】</span></a><br />
-            🎉<a href="https://www.infoq.cn/u/liaozhiwei/publish"><span>点击【InfoQ】</span></a><br />
-            🎉<a href="https://blog.51cto.com/u_15241602"><span>点击【51CTO】</span></a><br />
-            🎉<a href="https://java_wxid.gitee.io/liao-zhiweis-blog"><span>点击【博客网站】</span></a><br />
-            🎉<a href="https://juejin.cn/user/3290187978253431"><span>点击【稀土掘金】</span></a><br />
-            🎉<a href="https://my.oschina.net/u/3969122"><span>点击【开源中国】</span></a><br />
-            🎉<a href="https://weibo.com/u/6435818513"><span>点击【新浪微博】</span></a><br />
-            🎉<a href="https://www.toutiao.com/c/user/token/MS4wLjABAAAArQYj7pLVDM3Pf0Zqp1m50Be1yIbgLat5cKIobMsaHH3WORMNY3v1FzRLPp3cIRtJ/"><span>点击【今日头条】</span></a><br />
-            🎉<a href="https://tieba.baidu.com/home/main?un=%E8%B8%8F%E7%A0%B4%E5%A4%A9%E5%A4%A9"><span>点击【百度贴吧】</span></a><br />
-            🎉<a href="https://space.bilibili.com/353586723"><span>点击【哔哩哔哩】</span></a><br />
-            🎉<a href="http://www.mark-to-win.com/TeacherV2.html?id=34"><span>点击【马克Java社区】</span></a><br />
-            🎉<a href="https://img-blog.csdnimg.cn/e373a24a6b41451b98f55da7c7ccdc32.jpg"><span>点击【微信公众号】</span></a><br />
+            📝<a href="https://www.liaozhiwei.cn/"><span>点击【主页】</span></a><br />
+            📝<a href="https://gitee.com/java_wxid/java_wxid"><span>点击【项目】</span></a><br />
+            📝<a href="https://bbs.csdn.net/forums/liaozhiwei"><span>点击【社区】</span></a><br />
+            📝<a href="https://www.yuque.com/java_wxid"><span>点击【语雀】</span></a><br />
+            📝<a href="https://gitee.com/java_wxid"><span>点击【码云】</span></a><br />
+            📝<a href="https://www.zhihu.com/people/java_wxid"><span>点击【知乎】</span></a><br />
+            📝<a href="https://segmentfault.com/u/java_wxid"><span>点击【思否】</span></a><br />
+            📝<a href="https://www.jianshu.com/u/291aeb531f8b"><span>点击【简书】</span></a><br />
+            📝<a href="https://v.kuaishou.com/hx84Bn"><span>点击【快手】</span></a><br />
+            📝<a href="https://www.douyin.com/user/MS4wLjABAAAAymuW4SDeeylSFzL8oUMvVn50FY4X37UOeUBJB27dcv0"><span>点击【抖音】</span></a><br />
+            📝<a href="https://blog.csdn.net/Java_programmer_liao"><span>点击【CSDN】</span></a><br />
+            📝<a href="https://cloud.tencent.com/developer/user/5598481"><span>点击【腾讯云】</span></a><br />
+            📝<a href="https://developer.aliyun.com/profile/yt5hnoa7p5vi2"><span>点击【阿里云】</span></a><br />
+            📝<a href="https://bbs.huaweicloud.com/community/usersnew/id_1640920880921267"><span>点击【华为云】</span></a><br />
+            📝<a href="https://www.cnblogs.com/liaozhiwei/"><span>点击【博客园】</span></a><br />
+            📝<a href="https://img-blog.csdnimg.cn/f7b14fe02241434baaed687065479045.png"><span>点击【小红书】</span></a><br />
+            📝<a href="https://media.om.qq.com/author?id=MqnvyVClU3TriUji4gP9_bvg0"><span>点击【企鹅号】</span></a><br />
+            📝<a href="https://author.baidu.com/home?context=%7B%22app_id%22%3A%221678622734462341%22%7D&amp;wfr=bjh"><span>点击【百家号】</span></a><br />
+            📝<a href="http://a.mp.uc.cn/media?mid=d63d204da4c4410ab897f12e10c50437"><span>点击【大鱼号】</span></a><br />
+            📝<a href="https://mp.sohu.com/profile?xpt=ZTJlYWY3YzgtNzZmYi00NTljLTkwZjgtNGM4NmNhNDQxODVj"><span>点击【搜狐号】</span></a><br />
+            📝<a href="http://a.mp.uc.cn/media?mid=d63d204da4c4410ab897f12e10c50437"><span>点击【大鱼号】</span></a><br />
+            📝<a href="https://www.360kuai.com/pc/zmt?id=3001713896"><span>点击【快传号】</span></a><br />
+            📝<a href="https://www.163.com/dy/media/T1624158133120.html"><span>点击【网易号】</span></a><br />
+            📝<a href="https://www.9kd.com/view/20040172"><span>点击【凯迪网】</span></a><br />
+            📝<a href="https://gitcode.net/java_wxid"><span>点击【Gitcode】</span></a><br />
+            📝<a href="https://www.infoq.cn/u/liaozhiwei/publish"><span>点击【InfoQ】</span></a><br />
+            📝<a href="https://blog.51cto.com/u_15241602"><span>点击【51CTO】</span></a><br />
+            📝<a href="https://java_wxid.gitee.io/liao-zhiweis-blog"><span>点击【博客网站】</span></a><br />
+            📝<a href="https://juejin.cn/user/3290187978253431"><span>点击【稀土掘金】</span></a><br />
+            📝<a href="https://my.oschina.net/u/3969122"><span>点击【开源中国】</span></a><br />
+            📝<a href="https://weibo.com/u/6435818513"><span>点击【新浪微博】</span></a><br />
+            📝<a href="https://www.toutiao.com/c/user/token/MS4wLjABAAAArQYj7pLVDM3Pf0Zqp1m50Be1yIbgLat5cKIobMsaHH3WORMNY3v1FzRLPp3cIRtJ/"><span>点击【今日头条】</span></a><br />
+            📝<a href="https://tieba.baidu.com/home/main?un=%E8%B8%8F%E7%A0%B4%E5%A4%A9%E5%A4%A9"><span>点击【百度贴吧】</span></a><br />
+            📝<a href="https://space.bilibili.com/353586723"><span>点击【哔哩哔哩】</span></a><br />
+            📝<a href="http://www.mark-to-win.com/TeacherV2.html?id=34"><span>点击【马克Java社区】</span></a><br />
+            📝<a href="https://img-blog.csdnimg.cn/e373a24a6b41451b98f55da7c7ccdc32.jpg"><span>点击【微信公众号】</span></a><br />
         </section>
 
 
