--- a/index.html
+++ b/index.html
@@ -337,29 +337,6 @@
                 </li>
             </ul>
         </section>
-        <!-- 待提升的技能 -->
-        <section class="work info-unit">
-            <h2>
-                <i class="fa fa-pencil" aria-hidden="true"></i>待提升的技能</h2>
-            <hr/>
-            <ul>
-                <li>
-                    <p>🌟跑步、羽毛球、健身、唱歌、绘画、街舞、表演、辩论、音乐、摄影、剪辑</p>
-                </li>
-                <li>
-                    <p>🌟提升专业知识、职业技能、英语技能、沟通能力、耐心、学习前端知识做全栈开发</p>
-                </li>
-                <li>
-                    <p>🌟减脂、练腹肌、胸肌、肱二头肌、练腰、练核心力量</p>
-                </li>
-                <li>
-                    <p>🌟养胃、养肝、养肾、护眼、护肤</p>
-                </li>
-                <li>
-                    <p>🌟多接触异性、多和高层次人群交流、提升眼界</p>
-                </li>
-            </ul>
-        </section>
         <!-- 生活技能 -->
         <section class="work info-unit">
             <h2>
@@ -367,10 +344,10 @@
             <hr/>
             <ul>
                 <li>
-                    <p>🎉可以做几道拿手菜</p>
+                    <p>🎉可以做几道拿手菜：番茄炒鸡蛋、红萝卜丝炒肉、水煮白菜等</p>
                 </li>
                 <li>
-                    <p>🎉会做一些家务洗衣做饭、打扫卫生、收拾房间、倒垃圾、换窗帘等</p>
+                    <p>🎉会做一些家务：洗衣做饭、打扫卫生、收拾房间、倒垃圾、换窗帘等</p>
                 </li>
                 <li>
                     <p>🎉懂一些基本的法律常识</p>
@@ -401,6 +378,29 @@
                 </li>
                 <li>
                     <p>🎉能够定期做总结和规划</p>
+                </li>
+            </ul>
+        </section>
+        <!-- 待提升的技能 -->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>待提升的技能</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <p>🌟跑步、羽毛球、健身、唱歌、绘画、街舞、表演、辩论、音乐、摄影、剪辑</p>
+                </li>
+                <li>
+                    <p>🌟提升专业知识、职业技能、英语技能、沟通能力、耐心、学习前端知识做全栈开发</p>
+                </li>
+                <li>
+                    <p>🌟减脂、练腹肌、胸肌、肱二头肌、练腰、练核心力量</p>
+                </li>
+                <li>
+                    <p>🌟养胃、养肝、养肾、护眼、护肤</p>
+                </li>
+                <li>
+                    <p>🌟多接触异性、多和高层次人群交流、提升眼界</p>
                 </li>
             </ul>
         </section>
