--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <hr/>
             <ul>
                 <li><span>
-                            🌟我是廖志伟，一名Java高级开发工程师、Java领域优质创作者、CSDN博客专家、阿里云专家博主、51CTO专家博主、幕后大佬社区创始人、开源导航与开源项目贡献者、哔哩哔哩UP主、清华出版社作者、淘宝店家、软件公司创始人、Java课程讲师。🌟
+                            🌟我是廖志伟，一名Java高级开发工程师、Java领域优质创作者、CSDN博客专家、阿里云专家博主、51CTO专家博主、幕后大佬社区创始人、开源导航与开源项目贡献者、哔哩哔哩UP主、清华大学出版社作者、淘宝店家、软件公司创始人、Java课程讲师。🌟
                     </span>
                 </li>
             </ul>
@@ -203,7 +203,7 @@
             <hr/>
             <ul>
                 <li>
-                    <p>🎉思路1：开发一款社交类型的APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高兴技术企业材料，申请政府高兴企业补贴。</p>
+                    <p>🎉思路1：开发一款社交类型的APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高新技术企业材料，申请政府高新企业补贴。</p>
                 </li>
                 <li>
                     <p>🎉思路2：开淘宝店，自媒体平台引流到自己的淘宝店铺，淘宝店铺可以卖课程，也可以卖一些其他商品。前期去找一些比较便宜的货源，在自己的淘宝店卖，前期选择一些低利润的商品让淘宝店铺火起来，后期再上架一些高利润的商品。</p>
@@ -212,10 +212,16 @@
                     <p>🎉思路3：出版书籍，可以先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，百度词条可以写个某书的作者，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
                 </li>
                 <li>
-                    <p>🎉思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台（哔哩哔哩，西瓜视频，知乎)，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。</p>
+                    <p>🎉思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台（哔哩哔哩，西瓜视频，知乎，抖音)，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。后期靠直播打赏实现高盈利。</p>
                 </li>
                 <li>
-                    <p>🎉思路5：写付费专栏文章、短篇付费小说。</p>
+                    <p>🎉思路5：写付费专栏文章、短篇付费小说（AI辅助写作提升效率）。</p>
+                </li>
+                <li>
+                    <p>🎉思路6：学习金融相关知识，提升专业知识，进行投资理财。</p>
+                </li>
+                <li>
+                    <p>🎉思路7：打造赋能平台，。</p>
                 </li>
             </ul>
         </section>
@@ -322,6 +328,13 @@
                             商品多级分类目录场景：组合模式+访问者模式；
                             记录核心审计日志场景： 模板方法模式；
                             查询 ElasticSearch大量数据场景：迭代器模式；
+                    </span>
+                </li>
+                <li>
+                    <span>
+                        🍊深入理解Kubernetes系统原理、核心资源、Pod原理与创建及生命周期管理、Job、Cronjob and Statefulset、Service负载均衡Ingress、Service Mesh发展历程及Istio架构、存储供应使用NFSflexvolumeCSI接口、Configmap、SecretMetric service及HPA、Wordpress应用Mysql主从PVPVCSCHPA、
+                        部署Shardingsphere、Mycat、Mysql、Redis、中间件Rocketmq、Rabbitmq、Nacos、测试生产环境整体部署及全链路测试、自动化运维平台Jenkins与Devops环境搭建、Devops自动化Jenkins上Pipeline建立和使用与部署、Bookinginfo实例部署灰度发布故障注入流量、gateway和serviceentry使用、SDS认证授权等使用、
+                        Kiali、prometheus、grafana和ELK系统、Knative Servina、Knative Eventing 核心概念及Broker、Channel and Trigger使用、Kubesphere 云平台使用、具备两地三中心与三地五中心容灾架构实战经验。
                     </span>
                 </li>
                 <li>
