--- a/index.html
+++ b/index.html
@@ -221,7 +221,16 @@
                     <p>🎉思路6：学习金融相关知识，提升专业知识，进行投资理财。</p>
                 </li>
                 <li>
-                    <p>🎉思路7：打造赋能平台，。</p>
+                    <p>🎉思路7：打造产业赋能平台，以技术、资金、资源等方式为用户提供赋能服务的平台，可以让参与平台的人或组织获得更大的利益和机会。</p>
+                </li>
+                <li>
+                    <p>🎉思路8：打造自动化盈利流程，解放人力，积少成多。</p>
+                </li>
+                <li>
+                    <p>🎉思路9：打造私域流量，创建社群，精准投放产品。</p>
+                </li>
+                <li>
+                    <p>🎉思路10：零成本创意，规模式众筹，低成本引流，高利润产品变现。</p>
                 </li>
             </ul>
         </section>
