--- a/index.html
+++ b/index.html
@@ -196,44 +196,6 @@
                 </li>
             </ul>
         </section>
-        <!-- 副业思路 -->
-        <section class="work info-unit">
-            <h2>
-                <i class="fa fa-pencil" aria-hidden="true"></i>副业思路</h2>
-            <hr/>
-            <ul>
-                <li>
-                    <p>🎉思路1：开发一款社交类型的APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高新技术企业材料，申请政府高新企业补贴。</p>
-                </li>
-                <li>
-                    <p>🎉思路2：开淘宝店，自媒体平台引流到自己的淘宝店铺，淘宝店铺可以卖课程，也可以卖一些其他商品。前期去找一些比较便宜的货源，在自己的淘宝店卖，前期选择一些低利润的商品让淘宝店铺火起来，后期再上架一些高利润的商品。</p>
-                </li>
-                <li>
-                    <p>🎉思路3：出版书籍，可以先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，百度词条可以写个某书的作者，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
-                </li>
-                <li>
-                    <p>🎉思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台（哔哩哔哩，西瓜视频，知乎，抖音)，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。后期靠直播打赏实现高盈利。</p>
-                </li>
-                <li>
-                    <p>🎉思路5：写付费专栏文章、短篇付费小说（AI辅助写作提升效率）。</p>
-                </li>
-                <li>
-                    <p>🎉思路6：学习金融相关知识，提升专业知识，进行投资理财。</p>
-                </li>
-                <li>
-                    <p>🎉思路7：打造产业赋能平台，以技术、资金、资源等方式为用户提供赋能服务的平台，可以让参与平台的人或组织获得更大的利益和机会。</p>
-                </li>
-                <li>
-                    <p>🎉思路8：打造自动化盈利流程，解放人力，积少成多。</p>
-                </li>
-                <li>
-                    <p>🎉思路9：打造私域流量，创建社群，精准投放产品。</p>
-                </li>
-                <li>
-                    <p>🎉思路10：零成本创意，规模式众筹，低成本引流，高利润产品变现。</p>
-                </li>
-            </ul>
-        </section>
         <!--职业技能-->
         <section class="work info-unit">
             <h2>
@@ -478,7 +440,7 @@
             <hr/>
             <ul>
                 <li>
-                    <p>🌟文章点赞次数超过一万（9,121/10000）</p>
+                    <p>🌟文章点赞次数超过一万（9,146/10000）</p>
                 </li>
                 <li>
                     <p>🌟CSDN全站排名前一百名（最靠近的一次是134名）</p>
@@ -490,7 +452,7 @@
                     <p>🌟图灵学院课程学完（架构师课程学了大半了）</p>
                 </li>
                 <li>
-                    <p>🌟还清老家的房贷（还有五十万房贷）</p>
+                    <p>🌟还清老家的房贷（还有四十万房贷）</p>
                 </li>
                 <li>
                     <p>🌟娶个媳妇生个娃（单身求偶状态）</p>
@@ -500,6 +462,9 @@
                 </li>
                 <li>
                     <p>🌟实现个人财富自由（还在做梦）</p>
+                </li>
+		<li>
+                    <p>🌟眼里有光（感悟中）</p>
                 </li>
             </ul>
         </section>
@@ -559,14 +524,51 @@
             </ul>
         </section>
 
-
+        <!-- 副业思路 -->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>副业思路</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <p>🎉思路1：开发一款社交类型的APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高新技术企业材料，申请政府高新企业补贴。</p>
+                </li>
+                <li>
+                    <p>🎉思路2：开淘宝店，自媒体平台引流到自己的淘宝店铺，淘宝店铺可以卖课程，也可以卖一些其他商品。前期去找一些比较便宜的货源，在自己的淘宝店卖，前期选择一些低利润的商品让淘宝店铺火起来，后期再上架一些高利润的商品。</p>
+                </li>
+                <li>
+                    <p>🎉思路3：出版书籍，可以先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，百度词条可以写个某书的作者，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
+                </li>
+                <li>
+                    <p>🎉思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台（哔哩哔哩，西瓜视频，知乎，抖音)，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。后期靠直播打赏实现高盈利。</p>
+                </li>
+                <li>
+                    <p>🎉思路5：写付费专栏文章、短篇付费小说（AI辅助写作提升效率）。</p>
+                </li>
+                <li>
+                    <p>🎉思路6：学习金融相关知识，提升专业知识，进行投资理财。</p>
+                </li>
+                <li>
+                    <p>🎉思路7：打造产业赋能平台，以技术、资金、资源等方式为用户提供赋能服务的平台，可以让参与平台的人或组织获得更大的利益和机会。</p>
+                </li>
+                <li>
+                    <p>🎉思路8：打造自动化盈利流程，解放人力，积少成多。</p>
+                </li>
+                <li>
+                    <p>🎉思路9：打造私域流量，创建社群，精准投放产品。</p>
+                </li>
+                <li>
+                    <p>🎉思路10：零成本创意，规模式众筹，低成本引流，高利润产品变现。</p>
+                </li>
+            </ul>
+        </section>
     </section>
 </article>
 
 
 <footer class="footer">
     <p>© 2017 廖志伟.文档最后更新时间为
-        <time>2023年03月01日</time>.</p>
+        <time>2023年05月14日</time>.</p>
 </footer>
 
 <!-- 侧栏 -->
