--- a/index.html
+++ b/index.html
@@ -196,6 +196,46 @@
                 </li>
             </ul>
         </section>
+	    
+        <!-- 副业思路 -->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>副业思路</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <p>🌟思路1：开发APP的核心功能，根据需求和设计的整体架构来进行APP核心功能的开发，例如用户登录注册、好友聊天、发布朋友圈动态等等。录制APP功能实现的课程，将APP开发的过程进行录制成课程，包括APP开发的技术要点、难点等等，便于用户学习和使用。发布课程到自媒体平台中进行推广，将录制的课程发布到自媒体平台中，通过图文视频的形式进行推广，吸引粉丝关注。通过推广在自媒体平台中的课程和活动来吸引粉丝，提高APP的知名度和用户数量。准备销售课程，等到APP开发完成之后，将课程进行销售，提供APP开发的技术支持和服务。等到APP开发完成并上线之后，立即去申请软著，保护自己的知识产权。然后找第三方企业，协助写高新技术企业材料，申请当地政府高新企业补贴。</p>
+                </li>
+                <li>
+                    <p>🌟思路2：开设淘宝店，注册并选择合适的店铺类型，上传商品信息和完善店铺装修，同时利用自媒体平台吸引流量到自己的淘宝店铺。货源可通过批发市场或厂家直接采购，也可兜售自己的书籍资料、课程视频、软件、咨询服务等。初期可选择低成本、低利润的商品吸引客流，进行长期的运营和维护，才能实现长期稳定的盈利。</p>
+                </li>
+                <li>
+                    <p>🌟思路3：如果想出版一本书，可以先在自己的博客上写一些相关的文章练习写作技巧，同时也能吸引到对这个领域感兴趣的人。当写的文章达到一定的量级后，可能会有出版方主动联系你，要求你写这方面的书籍。这时就要不断继续写作和修改文章，直到最终完成了一本出版的书籍。虽然这本书不一定会带来很大的收益，但出版经验会让你拥有更多的知名度和权威性。可以在百度词条上创建自己的作者页面，同时在简历中标注已出版的书籍和博客网站，以提高职业竞争力。</p>
+                </li>
+                <li>
+                    <p>🌟思路4：走视频流量路线，选择受众面的渠道（哔哩哔哩适合年轻人，西瓜视频适合二三线城市用户，知乎适合文艺爱好者），拍摄大众用户都喜欢的内容（搞笑、生活、健康、美食、时尚、娱乐、旅游、音乐），走高品质路线（画质、声音、内容创意、表现形式），多账号、多平台发表作品增加影响力，使用脚本做推广降低成本，通过直播打赏可以实现高盈利。</p>
+                </li>
+                <li>
+                    <p>🌟思路5：以个人的生活经历或者专业领域为基础，结合AI辅助写作技术，增强创作能力，提升内容质量，选择一个特定的人群或主题作为目标读者群体，以此为基础，写付费专栏文章或短篇小说，打造独特的内容，利用网络平台和社交媒体渠道，与读者互动，建立良好的口碑和品牌形象，吸引更多读者，定期更新付费专栏和短篇小说，保持内容的新鲜度和吸引力，实现收益。</p>
+                </li>
+                <li>
+                    <p>🌟思路6：阅读相关金融书籍、报纸、杂志，深入了解金融市场动态和投资理财知识。确定自己的学习计划和目标，明确所需学习的内容；利用互联网平台参与股票交易、基金投资等活动，实践操作技能以及风险管理的能力。记录学习和投资的过程，不断总结经验。参加金融相关行业协会的活动，学习行业内容、交流经验，拓展人脉。</p>
+                </li>
+                <li>
+                    <p>🌟思路7：打造产业赋能平台，明确平台的服务对象和目标市场，确定平台的核心竞争力并进行差异化定位，确定参与的方式和规则（技术合作、资金投资、资源共享），建设技术平台（包括设计和开发平台的前后端技术、构架、数据库等），根据不同用户需求和特点，提供定制化服务方案（技术支持、资金支持、资源对接、市场推广），通过各种渠道吸引用户和合作伙伴（社交媒体、广告投放、公关宣传）参与平台，建立健全的平台运营和管理机制（人力资源管理、资金管理、风险控制），确保平台的长期稳定运营。</p>
+                </li>
+                <li>
+                    <p>🌟思路8：打造自动化盈利流程，找到一个具有市场需求和高利润的产品或服务，例如在线课程、电子书、软件工具等。在有足够的市场需求和收益前景时，利用自己的专业知识、技能和经验，开发并生产出创新且高质量的产品或服务。制作一个优秀的销售页面并进行有效的市场营销，如SEO和社交媒体广告。利用自动化工具和平台，如电子邮件营销、自动化回复和支付处理等，来简化与客户的交互过程。建立一个网站，并在网站上实现自动化过程。进行数据分析和客户反馈，不断改进和扩大自己的产品或服务线，定期测试和优化销售策略，以提供多样化的选择和更好的客户体验。将业务升级为自动化监测和调整的在线商店，以实现更高效的盈利和成长。</p>
+                </li>
+                <li>
+                    <p>🌟思路9：在社交媒体上打造一个个人品牌，可以通过创建博客、制作视频、开设社交媒体账号等方式构建自己的个人品牌，通过微信群、微信公众号、小程序、APP推送等方式与关注者交流互动。通过该社群，提供有趣、实用和有价值的产品，将产品推广给目标客户群体，利用精准投放的方式吸引目标客户群体的注意。</p>
+                </li>
+                <li>
+                    <p>🌟思路10：
+深入了解自己的爱好和专业技能，并以此为基础创建个人品牌。利用社交媒体和各种在线平台，扩大品牌知名度和用户基础。与潜在用户和粉丝互动，了解他们的需求和反馈，不断调整自己的品牌策略和产品设计。通过众筹平台筹集资金，用于品牌创意和产品开发。开发低成本产品，并利用其作为品牌宣传和引流的重要手段。不断提升产品品质和吸引力，并将其打造成高利润的商业产品。</p>
+                </li>
+            </ul>
+        </section>
         <!--职业技能-->
         <section class="work info-unit">
             <h2>
@@ -398,7 +438,7 @@
                     <p>🍊个人社区（幕后大佬）（已达成）</p>
                 </li>
                 <li>
-                    <p>🍊文章创作超过六百篇（已达成）</p>
+                    <p>🍊文章创作超过八百篇（已达成）</p>
                 </li>
                 <li>
                     <p>🍊文章访问量超过一百万（已达成）</p>
@@ -524,44 +564,6 @@
             </ul>
         </section>
 
-        <!-- 副业思路 -->
-        <section class="work info-unit">
-            <h2>
-                <i class="fa fa-pencil" aria-hidden="true"></i>副业思路</h2>
-            <hr/>
-            <ul>
-                <li>
-                    <p>🌟思路1：开发一款社交类型的APP，将开发APP的功能实现录制成课程，发布到自媒体平台中（图文视频推广)，引流推广吸引粉丝，可以卖课。等到APP核心功能开发完成之后，马上去申请软著，然后写高新技术企业材料，申请政府高新企业补贴。</p>
-                </li>
-                <li>
-                    <p>🌟思路2：开淘宝店，自媒体平台引流到自己的淘宝店铺，淘宝店铺可以卖课程，也可以卖一些其他商品。前期去找一些比较便宜的货源，在自己的淘宝店卖，前期选择一些低利润的商品让淘宝店铺火起来，后期再上架一些高利润的商品。</p>
-                </li>
-                <li>
-                    <p>🌟思路3：出版书籍，可以先在博客上写一些文章，练练手，同时吸引技术粉丝，达到一定程度后会有图书编辑找上门，找你写书，这个时候就需要你不断的写文章，修改文章，直到出版，出版后你的书不一定会大火，但是写过书的人会有一定知名度和权威性，百度词条可以写个某书的作者，再者可以在简历上写你出版书籍和博客网站，提高自己的职业竞争力。</p>
-                </li>
-                <li>
-                    <p>🌟思路4：走视频流量路线，选择受众面的渠道，拍一些大众用户都喜欢的东西，走高品质路线，多账号，多平台（哔哩哔哩，西瓜视频，知乎，抖音)，发表作品。一开始没那么高的粉丝和流量，可以使用脚本做推广，收费的好像有一辞脚本，就是给你的视频引流。后期靠直播打赏实现高盈利。</p>
-                </li>
-                <li>
-                    <p>🌟思路5：写付费专栏文章、短篇付费小说（AI辅助写作提升效率）。</p>
-                </li>
-                <li>
-                    <p>🌟思路6：学习金融相关知识，提升专业知识，进行投资理财。</p>
-                </li>
-                <li>
-                    <p>🌟思路7：打造产业赋能平台，以技术、资金、资源等方式为用户提供赋能服务的平台，可以让参与平台的人或组织获得更大的利益和机会。</p>
-                </li>
-                <li>
-                    <p>🌟思路8：打造自动化盈利流程，解放人力，积少成多。</p>
-                </li>
-                <li>
-                    <p>🌟思路9：打造私域流量，创建社群，精准投放产品。</p>
-                </li>
-                <li>
-                    <p>🌟思路10：零成本创意，规模式众筹，低成本引流，高利润产品变现。</p>
-                </li>
-            </ul>
-        </section>
 	    
 	<!-- 三观 -->
         <section class="work info-unit">
@@ -570,7 +572,7 @@
             <hr/>
             <ul>
                 <li>
-                    <p>🍊消费观：以前年少轻狂，被人吹捧年少有为，飘了,所以大手大脚花钱，但不是月光族。现在是衡量消费是否值得，搬了几次家发现没用的东西太多了，所以用理性压制感性消费（虽然有时候压制不住，但也在改变了）</p>
+                    <p>🍊消费观：衡量消费是否值得，搬了几次家发现没用的东西太多了。</p>
                 </li>
 		<li>
                     <p>🍊关系观：不太喜欢恋爱对方的边界不清、对待领导同事朋友会保持一定距离。</p>
@@ -599,13 +601,13 @@
                     <p>🎉不抽烟、不喝酒、不嚼槟榔、不说脏话、不暴力、不逛夜店、没有纹身、没有不良嗜好。</p>
                 </li>
 		<li>
-                    <p>🎉早上喜欢睡到自然醒、晚上12点前睡觉。</p>
+                    <p>🎉早上喜欢睡到自然醒、中午会午睡、晚上12点前睡觉。</p>
                 </li>    
 		<li>
                     <p>🎉不能接受的食物海鲜、榴莲、木瓜。</p>
                 </li>     
 		<li>
-                    <p>🎉不喜欢争吵、不喜欢对我持续散播负面能量的人。</p>
+                    <p>🎉不喜欢争吵、不喜欢持续散播负面能量的人。</p>
                 </li> 
             </ul>
         </section>    
@@ -614,15 +616,15 @@
 
 
 <footer class="footer">
-    <p>© 2017 廖志伟.文档最后更新时间为
-        <time>2017年05月14日</time>.</p>
+    <p>© 2023 廖志伟.文档最后更新时间为
+        <time>2023年06月23日</time>.</p>
 </footer>
 
 <!-- 侧栏 -->
 <aside>
     <ul>
         <li>
-            <a href="https://www.liaozhiwei.cn/" target="_blank">主页</a>
+            <a href="https://www.liaozhiwei.cn/" target="_blank">个人主页</a>
         </li>
     </ul>
 </aside>
