--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <hr/>
             <ul>
                 <li><span>
-                            🌟我是廖志伟，一名Java高级开发工程师、Java领域优质创作者、CSDN博客专家、阿里云专家博主、51CTO专家博主、幕后大佬社区创始人、开源导航与开源项目贡献者、哔哩哔哩UP主、清华大学出版社作者、淘宝店家、软件公司创始人、Java课程讲师。🌟
+                            🌟我是廖志伟，一名Java高级开发工程师、Java领域优质创作者、CSDN博客专家、阿里云专家博主、51CTO专家博主、幕后大佬社区创始人、开源导航与开源项目贡献者、哔哩哔哩UP主、清华大学出版社作者、淘宝店家、软件公司创始人（上海云帆原信息技术有限公司）、Java课程讲师。🌟
                     </span>
                 </li>
             </ul>
