--- a/index.html
+++ b/index.html
@@ -133,12 +133,22 @@
             <hr/>
             <ul>
                 <li>
-                    📝拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
+                    📝在技术文章的审核中担任过评审老师的角色、为问卷调查报告制定过题目、编写过多种产品软文、创建过个人社区和开源项目、也参与过专业课程的制定、涉足过游戏主播和比赛选手、创立过自己的公司和淘宝店、在CSDN写过八百多篇技术文章、出版过专业技术书籍、独立开发过自己的APP。
+                </li>
+            </ul>
+        </section>
+	<!-- 专业方向 -->
+        <section class="contact info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>专业方向</h2>
+            <hr/>
+            <ul>
+                <li>
+                    📝主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
                     消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。
                 </li>
             </ul>
         </section>
-
         <section class="qrcode info-unit">
             <h2><i class="fa fa-qrcode" aria-hidden="true"></i>自媒体矩阵</h2>
             📝<a href="https://www.liaozhiwei.cn/"><span>点击【主页】</span></a><br />
@@ -204,7 +214,7 @@
             <hr/>
             <ul>
                 <li>
-                    <p>🌟思路1：开发APP的核心功能，根据需求和设计的整体架构来进行APP核心功能的开发，例如用户登录注册、好友聊天、发布朋友圈动态等等。录制APP功能实现的课程，将APP开发的过程进行录制成课程，包括APP开发的技术要点、难点等等，便于用户学习和使用。发布课程到自媒体平台中进行推广，将录制的课程发布到自媒体平台中，通过图文视频的形式进行推广，吸引粉丝关注。通过推广在自媒体平台中的课程和活动来吸引粉丝，提高APP的知名度和用户数量。准备销售课程，等到APP开发完成之后，将课程进行销售，提供APP开发的技术支持和服务。等到APP开发完成并上线之后，立即去申请软著，保护自己的知识产权。然后找第三方企业，协助写高新技术企业材料，申请当地政府高新企业补贴。</p>
+                    <p>🌟思路1：开发APP的核心功能，根据需求和设计的整体架构来进行APP核心功能的开发，例如用户登录注册、好友聊天、发布朋友圈动态等等。录制APP功能实现的课程，将APP开发的过程进行录制成课程，包括APP开发的技术要点、难点等等，便于用户学习和使用。将录制的课程发布到自媒体平台中，通过图文视频的形式进行推广，吸引粉丝关注。通过推广在自媒体平台中的课程和活动来吸引粉丝，提高APP的知名度和用户数量。等到APP开发完成之后，将课程进行销售，提供APP开发的技术支持和服务。等到APP上线之后，立即去申请软著，保护自己的知识产权。然后找第三方企业，协助写高新技术企业材料，申请当地政府高新企业补贴。</p>
                 </li>
                 <li>
                     <p>🌟思路2：开设淘宝店，注册并选择合适的店铺类型，上传商品信息和完善店铺装修，同时利用自媒体平台吸引流量到自己的淘宝店铺。货源可通过批发市场或厂家直接采购，也可兜售自己的书籍资料、课程视频、软件、咨询服务等。初期可选择低成本、低利润的商品吸引客流，进行长期的运营和维护，才能实现长期稳定的盈利。</p>
@@ -415,13 +425,13 @@
                     <p>🌟跑步、羽毛球、健身、唱歌、绘画、街舞、表演、辩论、音乐、摄影、剪辑</p>
                 </li>
                 <li>
-                    <p>🌟提升专业知识、职业技能、英语技能、沟通能力、耐心、学习前端知识做全栈开发</p>
+                    <p>🌟提升专业知识、职业技能、英语、沟通能力、耐心、学习前端知识做全栈开发</p>
                 </li>
                 <li>
                     <p>🌟减脂、练腹肌、胸肌、肱二头肌、练腰、练核心力量</p>
                 </li>
                 <li>
-                    <p>🌟养胃、养肝、养肾、护眼、护肤</p>
+                    <p>🌟养胃、养肝、养肾、健脾、护眼、护肤、护腰、护颈</p>
                 </li>
                 <li>
                     <p>🌟多接触异性、多和高层次人群交流、提升眼界</p>
@@ -470,6 +480,9 @@
                 <li>
                     <p>🍊Java领域优质创作者（已达成）</p>
                 </li>
+		<li>
+                    <p>🍊图灵学院课程学完（已达成）</p>
+                </li>
             </ul>
         </section>
 
@@ -480,16 +493,13 @@
             <hr/>
             <ul>
                 <li>
-                    <p>🌟文章点赞次数超过一万（9,146/10000）</p>
+                    <p>🌟文章点赞次数超过一万（9,251/10000）</p>
                 </li>
                 <li>
                     <p>🌟CSDN全站排名前一百名（最靠近的一次是134名）</p>
                 </li>
                 <li>
                     <p>🌟社交类APP研发成功（研发中）</p>
-                </li>
-                <li>
-                    <p>🌟图灵学院课程学完（架构师课程学了大半了）</p>
                 </li>
                 <li>
                     <p>🌟还清老家的房贷（还有四十万房贷）</p>
@@ -505,6 +515,9 @@
                 </li>
 		<li>
                     <p>🌟眼里有光（感悟中）</p>
+                </li>
+		<li>
+                    <p>🌟八块腹肌（腹肌太难练了）</p>
                 </li>
             </ul>
         </section>
@@ -587,7 +600,7 @@
                     <p>🍊婚姻观：结婚的对象一定是因为喜欢才在一起的。</p>
                 </li>  
 		<li>
-                    <p>🍊人生观：人生在世总要留下些东西证明自己来过一趟、自由无拘束、洒脱自在。</p>
+                    <p>🍊人生观：人生在世总要留下些东西，证明自己来过一趟、自由无拘束、洒脱自在。</p>
                 </li>       
             </ul>
         </section>
