--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
             </ul>
         </section>
 
-        <!-- 简介 -->
+        <!-- 干过哪些事 -->
         <section class="contact info-unit">
             <h2>
-                <i class="fa fa-pencil" aria-hidden="true"></i>简介</h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>干过哪些事</h2>
             <hr/>
             <ul>
                 <li>
