--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </ul>
         </section>
 	<!-- 兴趣爱好 -->
-        <section class="work info-unit">
+        <section class="contact info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>兴趣爱好</h2>
             <hr/>
@@ -177,7 +177,7 @@
         </section>
 
         <!-- 自我评价 -->
-        <section class="work info-unit">
+        <section class="contact info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>自我评价/期望</h2>
             <hr/>
@@ -205,7 +205,7 @@
 
 	    
 	<!-- 三观 -->
-        <section class="work info-unit">
+        <section class="contact info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>消费观/关系观/生活观/恋爱观/婚姻观/人生观</h2>
             <hr/>
@@ -231,7 +231,7 @@
             </ul>
         </section>
 	<!-- 生活习惯 -->
-        <section class="work info-unit">
+        <section class="contact info-unit">
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>生活习惯</h2>
             <hr/>
