--- a/index.html
+++ b/index.html
@@ -185,32 +185,6 @@
                         </li>
                     </ul>
                 </section>
-                <!-- 三观 -->
-                <section class="contact info-unit">
-                    <h2>
-                        <i class="fa fa-pencil" aria-hidden="true"></i>消费观/关系观/生活观/恋爱观/婚姻观/人生观</h2>
-                    <hr/>
-                    <ul>
-                        <li>
-                            <p>🍊消费观：衡量消费是否值得，搬了几次家发现没用的东西太多了。</p>
-                        </li>
-                        <li>
-                            <p>🍊关系观：不太喜欢恋爱对方的边界不清、对待领导同事朋友会保持一定距离。</p>
-                        </li>
-                        <li>
-                            <p>🍊生活观：佛系，理性不失感性，擅长规划总结。</p>
-                        </li>
-                        <li>
-                            <p>🍊恋爱观：双方都能知足、善良、情绪稳定、乐观。</p>
-                        </li>
-                        <li>
-                            <p>🍊婚姻观：结婚的对象一定是因为喜欢才在一起的。</p>
-                        </li>
-                        <li>
-                            <p>🍊人生观：人生在世总要留下些东西，证明自己来过一趟、自由无拘束、洒脱自在。</p>
-                        </li>
-                    </ul>
-                </section>
                 <!-- 生活习惯 -->
                 <section class="contact info-unit">
                     <h2>
@@ -218,16 +192,7 @@
                     <hr/>
                     <ul>
                         <li>
-                            <p>🎉不抽烟、不喝酒、不嚼槟榔、不说脏话、不暴力、不逛夜店、没有纹身、没有不良嗜好。</p>
-                        </li>
-                        <li>
-                            <p>🎉早上喜欢睡到自然醒、中午会午睡、晚上12点前睡觉。</p>
-                        </li>
-                        <li>
-                            <p>🎉不能接受的食物海鲜、榴莲、木瓜。</p>
-                        </li>
-                        <li>
-                            <p>🎉不喜欢争吵、不喜欢持续散播负面能量的人。</p>
+                            <p>🎉不抽烟、不喝酒、不嚼槟榔、不说脏话、不暴力、不逛夜店、没有纹身、没有不良嗜好。早上喜欢睡到自然醒、中午会午睡、晚上12点前睡觉。不能接受的食物海鲜、榴莲、木瓜。不喜欢争吵、不喜欢持续散播负面能量的人。</p>
                         </li>
                     </ul>
                 </section>
@@ -627,6 +592,32 @@
                         </li>
                     </ul>
                 </section> 
+                <!-- 三观 -->
+                <section class="contact info-unit">
+                    <h2>
+                        <i class="fa fa-pencil" aria-hidden="true"></i>消费观/关系观/生活观/恋爱观/婚姻观/人生观</h2>
+                    <hr/>
+                    <ul>
+                        <li>
+                            <p>🍊消费观：衡量消费是否值得，搬了几次家发现没用的东西太多了。</p>
+                        </li>
+                        <li>
+                            <p>🍊关系观：不太喜欢恋爱对方的边界不清、对待领导同事朋友会保持一定距离。</p>
+                        </li>
+                        <li>
+                            <p>🍊生活观：佛系，理性不失感性，擅长规划总结。</p>
+                        </li>
+                        <li>
+                            <p>🍊恋爱观：双方都能知足、善良、情绪稳定、乐观。</p>
+                        </li>
+                        <li>
+                            <p>🍊婚姻观：结婚的对象一定是因为喜欢才在一起的。</p>
+                        </li>
+                        <li>
+                            <p>🍊人生观：人生在世总要留下些东西，证明自己来过一趟、自由无拘束、洒脱自在。</p>
+                        </li>
+                    </ul>
+                </section>
             </section>
         </article>
         <footer class="footer">
