--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <hr/>
                     <ul>
                         <li>
-                            <p>🎉不抽烟、不喝酒、不嚼槟榔、不说脏话、不暴力、不逛夜店、没有纹身、没有不良嗜好。早上喜欢睡到自然醒、中午会午睡、晚上12点前睡觉。不能接受的食物海鲜、榴莲、木瓜。不喜欢争吵、不喜欢持续散播负面能量的人。</p>
+                            <p>🎉不抽烟、不喝酒、不嚼槟榔、不说脏话、不暴力、不逛夜店、没有纹身、没有不良嗜好、异性朋友少、圈子干净。早上喜欢睡到自然醒、中午会午睡、晚上12点前睡觉。不能接受的食物海鲜、榴莲、木瓜，喜欢吃辣的、甜的、汤、肉食。</p>
                         </li>
                     </ul>
                 </section>
@@ -605,7 +605,7 @@
                             <p>🍊关系观：不太喜欢恋爱对方的边界不清、对待领导同事朋友会保持一定距离。</p>
                         </li>
                         <li>
-                            <p>🍊生活观：佛系，理性不失感性，擅长规划总结。</p>
+                            <p>🍊生活观：佛系，理性不失感性，擅长规划总结。不喜欢争吵、不喜欢持续散播负面能量的人、视频、文章、小说等。</p>
                         </li>
                         <li>
                             <p>🍊恋爱观：双方都能知足、善良、情绪稳定、乐观。</p>
@@ -614,7 +614,7 @@
                             <p>🍊婚姻观：结婚的对象一定是因为喜欢才在一起的。</p>
                         </li>
                         <li>
-                            <p>🍊人生观：人生在世总要留下些东西，证明自己来过一趟、自由无拘束、洒脱自在。</p>
+                            <p>🍊人生观：人生在世总要留下些东西，证明自己来过一趟、自由无拘束、洒脱自在。人生苦短，也要让自己开开心心的。</p>
                         </li>
                     </ul>
                 </section>
