--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <hr/>
                     <ul>
                         <li>
-                            📝在技术文章的审核中担任过评审老师的角色、为问卷调查报告制定过题目、编写过多种产品软文、创建过个人社区和开源项目、也参与过专业课程的制定、涉足过游戏主播和比赛选手、创立过自己的公司和淘宝店、在CSDN写过八百多篇技术文章、出版过专业技术书籍、独立开发过自己的APP。
+                            📝在技术文章的审核中担任过评审老师的角色、为问卷调查报告制定过题目、编写过多种产品软文、创建过个人社区和开源项目、也参与过专业课程的制定与视频录制、涉足过游戏主播和比赛选手、创立过自己的公司和淘宝店、在CSDN写过八百多篇技术文章、出版过专业技术书籍、独立开发过自己的APP、跑过十五公里、徒步爬过衡山、有过三个月减肥20斤的经历、小学弄哭过英语老师、入职场后当着老板的面吐槽直属领导、怼过各级别的领导（最大高我四个级别）、被裁员后成功拿到四万劳动赔偿。
                         </li>
                     </ul>
                 </section>
@@ -181,7 +181,7 @@
                     <ul>
                         <li>
                             📝主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
-                            消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。
+                            消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、Kubernetes容器编排。
                         </li>
                     </ul>
                 </section>
@@ -482,26 +482,41 @@
                         </li>
                     </ul>
                 </section>
-                <!-- 待提升的技能 -->
+                <!-- 持续计划 -->
                 <section class="work info-unit">
                     <h2>
-                        <i class="fa fa-pencil" aria-hidden="true"></i>待提升的技能</h2>
+                        <i class="fa fa-pencil" aria-hidden="true"></i>持续计划</h2>
                     <hr/>
                     <ul>
                         <li>
-                            <p>🌟跑步、羽毛球、健身、唱歌、绘画、街舞、表演、辩论、音乐、摄影、剪辑</p>
+                            <p>🌟资金情况：每周一次投资和消费总结</p>
                         </li>
                         <li>
-                            <p>🌟提升专业知识、职业技能、英语、沟通能力、耐心、学习前端知识做全栈开发</p>
+                            <p>🌟优质信息：每周看看在行、知识星球、微信公众号</p>
                         </li>
                         <li>
-                            <p>🌟减脂、练腹肌、胸肌、肱二头肌、练腰、练核心力量</p>
+                            <p>🌟提前保养：养胃、养肝、养肾、健脾、护眼、护肤、护腰、护颈</p>
                         </li>
                         <li>
-                            <p>🌟养胃、养肝、养肾、健脾、护眼、护肤、护腰、护颈</p>
+                            <p>🌟持续输出：自媒体持续输出文字内容、视音频创作（视频课程、书籍章节）</p>
                         </li>
                         <li>
-                            <p>🌟多接触异性、多和高层次人群交流、提升眼界</p>
+                            <p>🌟提升口才：多接触异性、多和高层次人群交流、提升眼界、学会沟通表达</p>
+                        </li>
+                        <li>
+                            <p>🌟编码加强：整理出版的书籍代码、持续研发软件（提升编码能力、打造独立平台）</p>
+                        </li>
+                        <li>
+                            <p>🌟兴趣爱好：辩论、摄影、剪辑、演讲、唱歌、绘画、街舞、篮球、乒乓球、羽毛球</p>
+                        </li>
+                        <li>
+                            <p>🌟锻炼身体：早起跑步/燃脂运动减脂、晚上练腹肌、胸肌、肱二头肌、练腰、练核心力量、练握力、练腕力</p>
+                        </li>
+                        <li>
+                            <p>🌟自律人生：戒断视频、游戏、小说、躺在床上不玩手机、睡觉前总结和冥想（提升注意力、专注度）</p>
+                        </li>
+                        <li>
+                            <p>🌟增强能力：提升专业知识、熟练职业技能、持续总结面试题、英语词汇、学习数据结构和算法（提升逻辑思维）</p>
                         </li>
                     </ul>
                 </section>
@@ -512,7 +527,7 @@
                     <hr/>
                     <ul>
                         <li>
-                            <p>🌟文章点赞次数超过一万（9,251/10000）</p>
+                            <p>🌟文章点赞次数超过一万（9,412/10000）</p>
                         </li>
                         <li>
                             <p>🌟CSDN全站排名前一百名（最靠近的一次是134名）</p>
@@ -521,19 +536,19 @@
                             <p>🌟社交类APP研发成功（研发中）</p>
                         </li>
                         <li>
-                            <p>🌟还清老家的房贷（还有四十万房贷）</p>
+                            <p>🌟还清老家的房贷</p>
                         </li>
                         <li>
                             <p>🌟娶个媳妇生个娃（单身求偶状态）</p>
                         </li>
                         <li>
-                            <p>🌟独立出版专业书籍（写书中）</p>
+                            <p>🌟独立出版专业书籍（明年出版）</p>
                         </li>
                         <li>
-                            <p>🌟实现个人财富自由（还在做梦）</p>
+                            <p>🌟实现个人财富自由（计划35岁躺平）</p>
                         </li>
                         <li>
-                            <p>🌟眼里有光（感悟中）</p>
+                            <p>🌟眼里有光（发现生活的美）</p>
                         </li>
                         <li>
                             <p>🌟八块腹肌（腹肌太难练了）</p>
@@ -595,26 +610,29 @@
                 <!-- 三观 -->
                 <section class="contact info-unit">
                     <h2>
-                        <i class="fa fa-pencil" aria-hidden="true"></i>消费观/关系观/生活观/恋爱观/婚姻观/人生观</h2>
+                        <i class="fa fa-pencil" aria-hidden="true"></i>消费观/关系观/生活观/恋爱观/婚姻观/人生观/世界观</h2>
                     <hr/>
                     <ul>
                         <li>
                             <p>🍊消费观：衡量消费是否值得，搬了几次家发现没用的东西太多了。</p>
                         </li>
                         <li>
-                            <p>🍊关系观：不太喜欢恋爱对方的边界不清、对待领导同事朋友会保持一定距离。</p>
+                            <p>🍊关系观：不太喜欢恋爱对方的边界不清、对待领导同事朋友也会保持一定边界。</p>
                         </li>
                         <li>
                             <p>🍊生活观：佛系，理性不失感性，擅长规划总结。不喜欢争吵、不喜欢持续散播负面能量的人、视频、文章、小说等。</p>
                         </li>
                         <li>
-                            <p>🍊恋爱观：双方都能知足、善良、情绪稳定、乐观。</p>
+                            <p>🍊恋爱观：双方能进行有效的沟通、知足、善良、乐观、情绪稳定、通情达理。</p>
                         </li>
                         <li>
-                            <p>🍊婚姻观：结婚的对象一定是因为喜欢才在一起的。</p>
+                            <p>🍊婚姻观：结婚的对象一定是因为喜欢才在一起的，能陪你走到最后的才是对的人，而她一定在我的规划里。</p>
                         </li>
                         <li>
                             <p>🍊人生观：人生在世总要留下些东西，证明自己来过一趟、自由无拘束、洒脱自在。人生苦短，也要让自己开开心心的。</p>
+                        </li>
+                        <li>
+                            <p>🍊世界观：这个世界有太多令人愤怒却无力改变的事情，而我能做的则是在能力范围内改变一些事情，让自己变得开心。</p>
                         </li>
                     </ul>
                 </section>
@@ -622,7 +640,7 @@
         </article>
         <footer class="footer">
             <p>© 2023 廖志伟.文档最后更新时间为
-                <time>2023年06月23日</time>.</p>
+                <time>2023年08月10日</time>.</p>
         </footer>
         <!-- 侧栏 -->
         <aside>
